[Design Fix]
Fixed small Design Issue where the Navigation Bar items for the "In-Company Courses" Page were not aligned in the same way as the ones on the different Pages.

--- a/stylefirmen.css
+++ b/stylefirmen.css
@@ -46,9 +46,6 @@ a {
 a:hover {
 	color: white;
 }
-ul {
-	text-align: center;
-}
 .main-header {
 	background-image: linear-gradient(54deg,rgba(74,76,179,.95) 34%,hsla(0,34%,71%,.95));
 	height: 100%;
